--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +23,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      .body {
+        background-image: url("T.jpg"); /* Replace 'your-image-file.jpg' with the path to your image */
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: right; /* Adjust as needed */
+        height: 100vh; /* Set the height of your div */
+        width: 100vw; /* Set the width of your div */
+        text-align: center; /* Center text within the div */
+      }
+    </style>
+    <title>Thomas Lynn's Portfolio</title>
   </head>
   <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
