design changes and error fixes

--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,15 @@
     -->
     <style>
       .body {
-        background-image: url("T.jpg"); /* Replace 'your-image-file.jpg' with the path to your image */
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-image: url("./T.png");
+        background-repeat: repeat;
         display: block;
+        background-size: 20%;
         background-position: right; /* Adjust as needed */
         height: 100vh; /* Set the height of your div */
         width: 100vw; /* Set the width of your div */
         text-align: center; /* Center text within the div */
+        font-weight: bold;
       }
     </style>
     <title>Thomas Lynn's Portfolio</title>
@@ -41,15 +41,5 @@
   <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
