--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       .body {
-        background-image: url("./T.png");
+        background-image: url("./T.jpg");
         background-repeat: repeat;
         display: block;
         background-size: 20%;
