--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         font-weight: bold;
       }
     </style>
-    <title>Thomas Lynn's Portfolio</title>
+    <title>Thomas Lynn's Portfolio V1</title>
   </head>
   <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
